# open_finops_pipelines_bigquery

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  PROGRESS.md  QUICKSTART.md  README.md  main.py  pyproject.toml
.dlt/: README.md  config.toml.example
.github/workflows/: README.md  deploy.yml
docs/: 001-arrow-tables-over-pandas.md  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md
docs/handoffs/: 01-aws-cur-pipeline.md  02-azure-focus-pipeline.md  03-aws-cur-refactor.md  04-next-refactor-dry.md
pipelines/: aws_cur.py  azure_billing.py
pipelines/common/: bigquery.py  manifest.py
